--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -1,5 +1,5 @@
-@import url('reset.css');
-@import url('global.css');
+@import url("/assets/css/reset.css");
+@import url("/assets/css/global.css");
 
 body {
   background-color: var(--primary-color);
@@ -7,10 +7,10 @@ body {
 
 body::before {
   content: "";
-  background-image: url('../images/spider-man-background.jpg');
+  background-image: url("/assets/images/spider-man-background.jpg");
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
+  background-position: center;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -22,19 +22,19 @@ body::before {
   padding: 1rem 0;
   width: 100%;
   text-align: center;
-  position: relative;
 }
 
 .s-menu__item {
   display: inline-block;
   text-transform: uppercase;
+  vertical-align: middle;
   margin: 0 1.25rem;
+  position: relative;
 }
 
 .s-menu__icon {
   width: 2.5rem;
   margin: 0 1.25rem;
-  vertical-align: middle;
 }
 
 .s-container {
@@ -46,23 +46,11 @@ body::before {
 }
 
 .s-card {
-  border: 0.5rem solid white;
+  border: 0.5rem solid #fff;
   width: 100%;
   height: 70vh;
   position: absolute;
   transition: filter .5s ease-in-out;
-}
-
-.s-card:nth-child(1) {
-  transform: rotateY(0deg) translateZ(50vw);
-}
-
-.s-card:nth-child(2) {
-  transform: rotateY(120deg) translateZ(50vw);
-}
-
-.s-card:nth-child(3) {
-  transform: rotateY(240deg) translateZ(50vw);
 }
 
 .s-card__background {
@@ -74,7 +62,20 @@ body::before {
   transition: opacity 1s ease-in-out;
 }
 
-.s-card__image {
+.s-card:nth-child(1){
+  transform: rotateY(0deg) translateZ(50vw);
+}
+
+.s-card:nth-child(2){
+  transform: rotateY(120deg) translateZ(50vw);
+}
+
+
+.s-card:nth-child(3){
+  transform: rotatey(240deg) translateZ(50vw);
+}
+
+.s-card__imagem{
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -82,7 +83,8 @@ body::before {
   transition: 1s ease-in-out;
 }
 
-.s-card__title {
+
+.s-card__title{
   font-size: 2rem;
   text-transform: uppercase;
   text-align: center;
@@ -92,23 +94,24 @@ body::before {
   transition: bottom 1s ease-in-out;
 }
 
-.s-controller {
+.s-controller{
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 0 3.75rem;
   margin-top: 3rem;
   bottom: 1.5rem;
   width: 100%;
 }
 
-.s-controller__button {
+.s-controller__button{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 2.5rem;
+  width: 2.5rem; 
   height: 2.5rem;
-  border: 2px solid white;
+  border: 2px solid #fff;
   border-radius: 50%;
   background-color: var(--primary-color);
   text-align: center;
@@ -116,71 +119,76 @@ body::before {
   font-weight: bold;
   cursor: pointer;
   z-index: 1;
-  transition: transform 0.3s ease-in-out;
+  transition:.3s ease-in-out
 }
 
-.s-controller__button:hover {
+.s-controller__button:hover{
   transform: scale(1.1);
 }
 
-.s-controller__button:nth-child(2) {
+.s-controller__button:nth-child(2){
   margin: 0 3.75rem;
 }
 
-.s-controller__button--active {
-  background-color: white;
+.s-controller__button--active{
+  background-color: #fff;
   color: var(--primary-color);
   border: 0.1875rem solid var(--primary-color);
-  outline: 0.125rem solid white;
+  outline: 0.125rem solid #fff;
 }
 
-.s-controller__line {
-  background-color: white;
+.s-controller__line{
+  background-color: #fff;
   width: 50%;
   height: 2px;
   position: absolute;
 }
 
-/* Hover Animation */
 
-.s-card--hovered .s-card__background {
+.s-card--hovered .s-card__background{
   cursor: pointer;
   opacity: 0;
 }
 
-.s-card--hovered .s-card__image {
+.s-card--hovered .s-card__imagem{
   transform: scale(1.4);
-  filter: drop-shadow(30px 10px 4px rgba(0, 0, 0, .5));
+  filter: drop-shadow(30px 10px 4px rgba(0,0,0,.5));
 }
 
-body#spider-man-01-hovered::before {
-  background-image: url('../images/pic-sm-bg-01.jpg');
+body#spider-man-01-hovered::before{
+  background-image: url('/assets/images/pic-sm-bg-01.jpg');
 }
 
-body#spider-man-02-hovered::before {
-  background-image: url('../images/pic-sm-bg-02.jpg');
+body#spider-man-02-hovered::before{
+  background-image: url('/assets/images/pic-sm-bg-02.jpg');
 }
 
-body#spider-man-03-hovered::before {
-  background-image: url('../images/pic-sm-bg-03.jpg');
+body#spider-man-03-hovered::before{
+  background-image: url('/assets/images/pic-sm-bg-03.jpg');
 }
 
-body[id^="spider-man-"]::before {
+body[id^="spider-man-"]::before{
   opacity: 1;
 }
 
-body[id^="spider-man-"] .s-card:not(.s-card--hovered) {
+body[id^="spider-man-"] .s-card:not(.s-card--hovered){
   filter: grayscale(100%);
 }
 
-.s-card--hovered .s-card__title {
+.s-card--hovered .s-card__title{
   bottom: 50%;
 }
 
-.s-cards-carousel {
+.s-cards-carousel{
   display: flex;
   justify-content: center;
   width: calc(100vw / 3 - 10%);
   transform-style: preserve-3d;
   transition: transform 0.4s ease-in;
 }
+
+
+
+
+
+
