--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,11 +1,11 @@
-* {
+*{
   padding: 0;
   margin: 0;
   vertical-align: baseline;
   list-style: none;
   border: 0;
-  color: #FFF;
-  font-family: "Poppins", sans-serif;
+  color: #fff;
   font-size: 16px;
   text-decoration: none;
+  box-sizing: border-box;
 }
